# py-shinylive-pyfetch-mimic

./: .gitignore  README.md  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: python-publish.yml  python-pytest.yml  python-robot.yml  tests.yml
src/: httpx_http.py  pyfetch_mimic.py  pyodide_wrapper.py
src_test_webserver/: app_routes.py  main.py
src_test_webserver/files/: test.csv
test/: test_endpoints.py  test_wrapper.py
test/robot_tests/: __init__.robot  _test_variables.py  tests.robot
test/robot_tests/utils/chromedriver_macos_arm64/: LICENSE.chromedriver
test/shinylive_tests/: app.py
test/tests_shinylive/: app.py  test_pyfetch.py
