[project]
name = "pyfetch_wrapper"
version = "0.1"
authors = [
  {name="darrida", email="darrida.py@gmail.com"}
]
description = "Wrapper for pyodide.http.pyfetch to enable one set of http calls for both local and pyodide executions."
readme = "README.md"
dependencies = [
  'shiny',
  'shinylive',
  'httpx',
  'python_version < 3.8',
]

[project.optional-dependencies]
tests = [
  'fastapi',
  'pytest',
  'pytest-asyncio',
]

[project.urls]
Homepage = "https://github.com"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"